fix alignment

--- a/iteration2/game1/css/style.css
+++ b/iteration2/game1/css/style.css
@@ -23,9 +23,9 @@ html {
     position: relative;
 }
 
-.icon_home {
+.icon {
     position: absolute;
-    left: 5px;
+    left: 0;
     display: inline-block;
     vertical-align: top;
 }
